images optimization .jpg

--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
       <div class="contenedor">
         <h2 class="subtitulo">Galeria</h2>
         <div class="contenedor-galeria">
-          <img src="img/uno.jpg" alt="pimera imagen de la galeria" class="img-galeria">
-          <img src="img/dos.jpg" alt="Segunda imagen de la galeria" class="img-galeria">
-          <img src="img/tres.jpg" alt="Tercera imagen de la galeria" class="img-galeria">
-          <img src="img/cuatro.jpg" alt="Cuarta imagen de la galeria" class="img-galeria">
-          <img src="img/cinco.jpg" alt="Quinta imagen de la galeria" class="img-galeria">
-          <img src="img/seis.jpg" alt="Sexta imagen de la galeria" class="img-galeria">
+          <img src="img/uno-min.jpg" alt="pimera imagen de la galeria" class="img-galeria">
+          <img src="img/dos-min.jpg" alt="Segunda imagen de la galeria" class="img-galeria">
+          <img src="img/tres-min.jpg" alt="Tercera imagen de la galeria" class="img-galeria">
+          <img src="img/cuatro-min.jpg" alt="Cuarta imagen de la galeria" class="img-galeria">
+          <img src="img/cinco-min.jpg" alt="Quinta imagen de la galeria" class="img-galeria">
+          <img src="img/seis-min.jpg" alt="Sexta imagen de la galeria" class="img-galeria">
         </div>
       </div>
     </section>
 
     <section class="imagen-light">
       <img src="img/close-icon.svg" alt="Imagen para cerrar seccion, contienen una x" class="close">
-      <img src="img/woman-dev.jpg" alt="agregar imagen" class="agregar-imagen">
+      <img src="img/woman-dev-min.jpg" alt="agregar imagen" class="agregar-imagen">
     </section>
 
     <section class="contenedor" id="expertos">
